--- a/index.html
+++ b/index.html
@@ -12,19 +12,94 @@
     <h3 style="text-align: center;">Stitching Dreams, Crafting Creativity.</h3>
     <br>
     <hr>
-    <h1 style="text-align: center;">Our Products</h1>
+    <h1 style="text-align: center;">Latest Products</h1>
     <hr>
     <div id="display-box">
         <div> 
-            <div id="img" style="background-image: url(Ear\ rings1.jpeg);"></div>
+            <div id="img" style="background-image: url(floral.jpeg);"></div>
             <br>
-            <h1 style="text-align: center;">Ear Rings</h1>
+            <div id="img" style="background-image: url(kaudi\ necklace.jpeg);"></div>
+            <br>
+            <div id="img" style="background-image: url(earrings\ and\ maangteeka....jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Crocheted floral, kaudi necklace, earrings and maangteeka</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
-        
-        
     </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url( floral\ beaded\ saree\ brooch.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Floral beaded saree brooch</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(floral\ beaded\ saree\ pin.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Floral beaded saree pin</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Decorative\ brooch.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Decorative brooch</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(floral\ beaded\ saree\ brooch.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Floral saree brooch</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(crocheted\ Roses.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Crocheted Roses</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Hoop\ earrings.\ size\ 5\ mm.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Hoop earrings, Size 5 mm</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Cute\ Sunny\ keychain.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Cute Sunny keychain</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Wooden\ beaded\ crochet\ saree\ pin.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Wooden beaded crochet saree pin</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+
 </body>
 <script src="script.js"></script>
 </html>
