--- a/index.html
+++ b/index.html
@@ -99,7 +99,369 @@
         </div>
         <br>
     </div>
-
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(crocheted\ danglers.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Crocheted Danglers</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Mini\ dragon.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Mini dragon</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(car\ hangings-\ a\ cute\ dolphin.jpeg); width: 350px; "></div>
+            <br>
+            <h1 style="text-align: center;">Car hangings- a cute dolphin</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Crocheted\ Pouches-\ different\ sizes.jpeg); width: 300px;"></div>
+            <br>
+            <h1 style="text-align: center;">Crocheted Pouches- different sizes</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(A\ bouquet\ of\ tulips.jpeg); height: 450px;"></div>
+            <br>
+            <h1 style="text-align: center;">A bouquet of tulips</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Octopus\ key\ chain.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Octopus key chain</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(A\ bell\ flower\ key\ chain.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">A bell flower key chain</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Cutie\ froggie\ keychain.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Cutie froggie keychain</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Macrame\ hoops.jpeg);"></div>
+            <br>
+            <h1 style="text-align: center;">Macrame hoops</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Beautiful\ Jellyfish\ keychain.jpeg);"></div>
+        <br>
+        <h1 style="text-align: center;">Beautiful Jellyfish keychain</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Small\ Hoops.jpeg);"></div>
+        <br>
+        <h1 style="text-align: center;">Small Hoops</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Lavender\ flower\ danglers.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Lavender flower danglers</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Cute\ little\ duckling\ keychains.jpeg); width: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Cute little duckling keychains</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(6mm\ beaded\ hoop\ earrings.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">6mm beaded hoop earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Grilled\ hoops\ -6mm.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Grilled hoops -6mm</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Saree\ pins.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Saree pins</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Bookmark.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Bookmark</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Curled\ earrings.jpeg); height: 450px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Curled earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Baby\ dino\ keychain.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Baby dino keychain</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Baby\ bunny\ keychain.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Baby bunny keychain</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Half\ moon\ earrings.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Half moon earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Floral\ earrings.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Floral earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Daisy\ earrings.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Daisy earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Yellow\ Saree\ pin.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Yellow Saree pin</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Saree\ brooch.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Saree brooch</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Green\ Saree\ pin.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Green Saree pin</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(Bag\ hanging-\ Rose.jpeg); height: 350px;" ></div>
+            <br>
+            <h1 style="text-align: center;">Bag hanging- Rose</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Cutie\ bunny\ toy.jpeg); width: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Bag hanging- Rose</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Pink\ Coin\ potli.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Pink Coin potli</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Morpankh\ earrings.jpeg); height: 350px; width: 300px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Morpankh earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Designer\ hoops.jpeg); height: 350px; width: 300px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Designer hoops</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Butterfly\ brooch.jpeg);" ></div>
+        <br>
+        <h1 style="text-align: center;">Butterfly brooch</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Rose\ saree\ pin.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Rose saree pin</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Lavender\ keychain.jpeg); width: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Lavendar keychain</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Yellow\ coin\ potli.jpeg); width: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Yellow coin potli</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Chaan\ baaliyan.jpeg); height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Chan baaliyan</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Sunflower\,\ square\ earringsSunflower\,\ square\ earrings.jpeg); width: 350px; height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Sunflower, square earrings</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Blue\ Hoops.jpeg); width: 350px; height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Blue Hoops</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Car\ hangings-\ cute\ turtle.jpeg); width: 350px; height: 350px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Car hanging- cute turtle</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
+<div id="display-box">
+    <div> 
+        <div id="img" style="background-image: url(Colorful\ coin\ potli.jpeg); width: 400px;" ></div>
+        <br>
+        <h1 style="text-align: center;">Colorful Coin Potli</h1>
+        <button> <a href="order.html">Order Now</a> </button>
+    </div>
+    <br>
+</div>
 </body>
 <script src="script.js"></script>
 </html>
