--- a/order.html
+++ b/order.html
@@ -14,9 +14,9 @@
         <hr>
         <h1 style="text-align: center;">How to Order?</h1>
         <ol>
-            <li>Copy the following mobile number 9935466758</li>
-            <li>Save the number</li>
-            <li>Send the screenshot of the product to Creative Expressions directly and place the order</li>
+            <li>Copy the following mobile number 9935466758.</li>
+            <li>Save the number.</li>
+            <li>Send the screenshot of the product to Creative Expressions directly and place the order.</li>
             <li>We are happy to have you!</li>
         </ol>
             <button><a href="index.html">Return to Shopping Page</a></button>
