--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 </div>
 <div id="display-box">
     <div> 
-        <div id="img" style="background-image: url(Bookmark.jpeg); height: 350px;" ></div>
+        <div id="img" style="background-image: url(Bookmark.jpeg); height: 550px;" ></div>
         <br>
         <h1 style="text-align: center;">Bookmark</h1>
         <button> <a href="order.html">Order Now</a> </button>
@@ -348,7 +348,7 @@
     <div> 
         <div id="img" style="background-image: url(Cutie\ bunny\ toy.jpeg); width: 350px;" ></div>
         <br>
-        <h1 style="text-align: center;">Bag hanging- Rose</h1>
+        <h1 style="text-align: center;">Cute bunny toy</h1>
         <button> <a href="order.html">Order Now</a> </button>
     </div>
     <br>
@@ -421,7 +421,7 @@
     <div> 
         <div id="img" style="background-image: url(Chaan\ baaliyan.jpeg); height: 350px;" ></div>
         <br>
-        <h1 style="text-align: center;">Chan baaliyan</h1>
+        <h1 style="text-align: center;">Chaand baaliyan</h1>
         <button> <a href="order.html">Order Now</a> </button>
     </div>
     <br>
