--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
     <hr>
     <div id="display-box">
         <div> 
+            <div id="img" style="background-image: url( Floral\ Bag\ Hanging.jpeg);width: 275x; height: 225px;"></div>
+            <br>
+            <div id="img" style="background-image: url( floral\ bad\ hanging2.jpeg);; height: 550px;"></div>
+            <br>
+            <h1 style="text-align: center;">Floral Bag Hanging</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url( Beautiful\ yellow\ jellyfish\ keychain.jpeg); height: 550px;"></div>
+            <br>
+            <h1 style="text-align: center;">Beautiful yellow jellyfish keychain</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
             <div id="img" style="background-image: url(floral.jpeg);"></div>
             <br>
             <div id="img" style="background-image: url(kaudi\ necklace.jpeg);"></div>
@@ -155,7 +175,7 @@
     </div>
     <div id="display-box">
         <div> 
-            <div id="img" style="background-image: url(A\ bell\ flower\ key\ chain.jpeg);"></div>
+            <div id="img" style="background-image: url(A\ bell\ flower\ key\ chain.jpeg); height: 450px;"></div>
             <br>
             <h1 style="text-align: center;">A bell flower key chain</h1>
             <button> <a href="order.html">Order Now</a> </button>
@@ -183,9 +203,9 @@
 </div>
 <div id="display-box">
     <div> 
-        <div id="img" style="background-image: url(Beautiful\ Jellyfish\ keychain.jpeg);"></div>
+        <div id="img" style="background-image: url(Beautiful\ Jellyfish\ keychain.jpeg);height: 450px;"></div>
         <br>
-        <h1 style="text-align: center;">Beautiful Jellyfish keychain</h1>
+        <h1 style="text-align: center;">Beautiful Blue Jellyfish keychain</h1>
         <button> <a href="order.html">Order Now</a> </button>
     </div>
     <br>
@@ -246,7 +266,7 @@
 </div>
 <div id="display-box">
     <div> 
-        <div id="img" style="background-image: url(Bookmark.jpeg); height: 550px;" ></div>
+        <div id="img" style="background-image: url(Bookmark.jpeg); width: 500px;height: 500px;" ></div>
         <br>
         <h1 style="text-align: center;">Bookmark</h1>
         <button> <a href="order.html">Order Now</a> </button>
