--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 </div>
 <div id="display-box">
     <div> 
-        <div id="img" style="background-image: url(Bookmark.jpeg); width: 500px;height: 500px;" ></div>
+        <div id="img" style="background-image: url(Bookmark.jpeg);height: 500px;" ></div>
         <br>
         <h1 style="text-align: center;">Bookmark</h1>
         <button> <a href="order.html">Order Now</a> </button>
