--- a/index.html
+++ b/index.html
@@ -11,9 +11,29 @@
     <h1 style="text-align: center;">Creative Expressions</h1>
     <h3 style="text-align: center;">Stitching Dreams, Crafting Creativity.</h3>
     <br>
+    <div class="dropdown">
+        <button>Search</button>
+        <div class="search-help">
+            <p>1. Tap the three vertical dots (menu) in the top-right corner.</p>
+            <p>2. Select "Find in page."</p>
+            <p>3. Type the product you want to find(only use one word).</p>
+            <p>4. Use the arrows to navigate through the matches.</p>
+        </div>
+    </div>
     <hr>
     <h1 style="text-align: center;">Latest Products</h1>
     <hr>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url( Doll\ bag\ hanging.jpeg);width: 375x; height: 350px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Doll\ bag\ hanging2.jpeg); height: 550px; width: 350px;"></div>
+            <br>
+            <h1 style="text-align: center;">Doll bag hanging</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
     <div id="display-box">
         <div> 
             <div id="img" style="background-image: url( Floral\ Bag\ Hanging.jpeg);width: 275x; height: 225px;"></div>
@@ -482,6 +502,7 @@
     </div>
     <br>
 </div>
+<script src="script.js"></script>
 </body>
 <script src="script.js"></script>
 </html>
