--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <h3 style="text-align: center;">Stitching Dreams, Crafting Creativity.</h3>
     <br>
     <div class="dropdown">
-        <button>Search</button>
-        <div class="search-help">
-            <p>1. Tap the three vertical dots (menu) in the top-right corner.</p>
-            <p>2. Select "Find in page."</p>
-            <p>3. Type the product you want to find(only use one word).</p>
-            <p>4. Use the arrows to navigate through the matches.</p>
-        </div>
+        <button><a href="search.html">Search</a></button>
     </div>
     <hr>
     <h1 style="text-align: center;">Latest Products</h1>
