--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
     <hr>
     <div id="display-box">
         <div> 
+            <div id="img" style="background-image: url( Designer\ bookmark1.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Designer\ bookmark2.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Designer\ Bookmark3.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Designer\ Bookmark4.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Designer\ Bookmark5.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Designer\ Bookmark6.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <h1 style="text-align: center;">Designer Laminated Bookmarks</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
             <div id="img" style="background-image: url( Doll\ bag\ hanging.jpeg);width: 375x; height: 350px;"></div>
             <br>
             <div id="img" style="background-image: url( Doll\ bag\ hanging2.jpeg); height: 550px; width: 350px;"></div>
