--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Creative Expressions</title>
 </head>
 <link rel="stylesheet" href="style.css">
-<body>
+<body style="background-color: #edf3fd;">
     <div id="img-special"></div>
     <h1 style="text-align: center;">Creative Expressions</h1>
     <h3 style="text-align: center;">Stitching Dreams, Crafting Creativity.</h3>
@@ -29,7 +29,7 @@
             <br>
             <div id="img" style="background-image: url( Designer\ Bookmark5.jpeg);width: 375x; height: 550px;"></div>
             <br>
-            <div id="img" style="background-image: url( Designer\ Bookmark6.jpeg);width: 375x; height: 550px;"></div>
+            <div id="img" style="background-image: url( Designer\ Bookmark4.jpeg);width: 375x; height: 550px;"></div>
             <br>
             <h1 style="text-align: center;">Designer Laminated Bookmarks</h1>
             <button> <a href="order.html">Order Now</a> </button>
