--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
     <hr>
     <div id="display-box">
         <div> 
+            <div id="img" style="background-image: url( Crochet\ Wollen\ Cap.jpeg); width: 300px;" ></div>
+            <br>
+            <h1 style="text-align: center;">Crochet Wollen Cap</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
             <div id="img" style="background-image: url( Designer\ bookmark1.jpeg);width: 375x; height: 550px;"></div>
             <br>
             <div id="img" style="background-image: url( Designer\ bookmark2.jpeg);width: 375x; height: 550px;"></div>
