--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div> 
             <div id="img" style="background-image: url( Crochet\ Wollen\ Cap.jpeg); width: 300px;" ></div>
             <br>
-            <h1 style="text-align: center;">Crochet Wollen Cap</h1>
+            <h1 style="text-align: center;">Crochet Woollen Cap</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
