--- a/index.html
+++ b/index.html
@@ -28,9 +28,22 @@
     <hr>
     <div id="display-box">
         <div> 
+            <div id="img" style="background-image: url( Floral\ crochet\ hair\ accsory1.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url(floral\ crochet\ hair\ accessory2.jpeg);width: 375x; height: 550px;"></div>
+            <br>
+            <div id="img" style="background-image: url( floral\ chrochet\ hair\ accessory3.jpeg);width: 375x; height: 375px;"></div>
+            <br>
+            <h1 style="text-align: center;">Floral Crochet Hair Accessory</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
             <div id="img" style="background-image: url( Crochet\ Wollen\ Cap.jpeg); width: 300px;" ></div>
             <br>
-            <h1 style="text-align: center;">Crochet Woollen Cap</h1>
+            <h1 style="text-align: center;">Crochet Wollen Cap</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
