--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
     <hr>
     <div id="display-box">
         <div> 
+            <br>
+            <div id="img" style="background-image: url( Yellow\ mobile\ bad.jpeg);height: 550px ;width: 250px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Yellow\ mobile\ bag2.jpeg); height: 550px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet Yellow Mobile Bag</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url( Blue\ Mobile\ Bag.jpeg); height: 350px ;width: 400px;"></div>
+            <br>
+            <div id="img" style="background-image: url( Blue\ Mobile\ bag2.jpeg); height: 550px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet Blue Mobile Bag</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
             <div id="img" style="background-image: url( Floral\ crochet\ hair\ accsory1.jpeg);width: 375x; height: 550px;"></div>
             <br>
             <div id="img" style="background-image: url(floral\ crochet\ hair\ accessory2.jpeg);width: 375x; height: 550px;"></div>
@@ -99,13 +122,24 @@
     </div>
     <div id="display-box">
         <div> 
-            <div id="img" style="background-image: url(floral.jpeg);"></div>
+            <div id="img" style="background-image: url( Beautiful\ yellow\ jellyfish\ keychain.jpeg); height: 550px;"></div>
             <br>
-            <div id="img" style="background-image: url(kaudi\ necklace.jpeg);"></div>
+            <h1 style="text-align: center;">Beautiful yellow jellyfish keychain</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    </div>
+    <div id="display-box">
+        <div> 
+            <div id="img" style="background-image: url(floral.jpeg); width: 300px;"></div>
             <br>
-            <div id="img" style="background-image: url(earrings\ and\ maangteeka....jpeg);"></div>
+            <div id="img" style="background-image: url(kaudi\ necklace.jpeg); height: 300px;" ></div>
             <br>
-            <h1 style="text-align: center;">Crocheted floral, kaudi necklace, earrings and maangteeka</h1>
+            <div id="img" style="background-image: url(earrings\ and\ maangteeka....jpeg); height: 300px;"></div>
+            <br>
+            <div id="img" style="background-image: url(Yellow\ bracelet.jpeg); width: 350px;"></div>
+            <br>
+            <h1 style="text-align: center;">Crocheted floral, kaudi necklace, earrings bracelet and maangteeka</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
