--- a/index.html
+++ b/index.html
@@ -29,6 +29,93 @@
     <div id="display-box">
         <div> 
             <br>
+            <div id="img" style="background-image: url( Chrochet\ Hair\ Accesory1.jpeg);height: 350px ;width: 125px;"></div>
+            <br>
+            <br>
+            <div id="img" style="background-image: url( Chrochet\ Hair\ Accesoy\ 2.jpeg);height: 250px ;width: 175px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet Hair Accesoroy</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Christmas\ Accesories.jpeg);height: 350px ;width: 350px;"></div>
+            <br>
+            <h1 style="text-align: center;">Christmas Accesories</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Chrochet\ Cute\ Santa.jpeg);height: 350px ;width: 275px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet Cute Santa</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Chrochet\ snowflake.jpeg);height: 350px ;width: 275px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet Snowflake</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Chrochet\ Granny\ Square\ Mobile\ Bag.jpeg);height: 500px ;width: 250px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet Granny Square Mobile Bag</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Green\ Crochet\ mobile\ bag.jpeg);height: 250px ;width: 250px;"></div>
+            <br>
+            <h1 style="text-align: center;">Green Chrochet Mobile Bag</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Crochet\ hanbag1.jpeg);height: 500px ;width: 250px;"></div>
+            <br>
+            <br>
+            <div id="img" style="background-image: url( Chrochet\ hand\ bag\ 2.jpeg);height: 500px ;width: 350px;"></div>
+            <br>
+            <h1 style="text-align: center;">Chrochet hangbag</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Holy\ Cross\ Keychain.jpeg);height: 300px ;width: 250px;"></div>
+            <br>
+            <h1 style="text-align: center;">Holy Cross Keychains</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
+            <div id="img" style="background-image: url( Christmas\ card.jpeg);height: 300px ;width: 225px;"></div>
+            <br>
+            <h1 style="text-align: center;">Christmas Card</h1>
+            <button> <a href="order.html">Order Now</a> </button>
+        </div>
+        <br>
+    <div id="display-box">
+        <div> 
+            <br>
             <div id="img" style="background-image: url( Yellow\ mobile\ bad.jpeg);height: 550px ;width: 250px;"></div>
             <br>
             <div id="img" style="background-image: url( Yellow\ mobile\ bag2.jpeg); height: 550px;"></div>
