--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br>
             <div id="img" style="background-image: url( Chrochet\ Hair\ Accesoy\ 2.jpeg);height: 250px ;width: 175px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Hair Accesoroy</h1>
+            <h1 style="text-align: center;">Chrochet Hair Accesory</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
