--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br>
             <div id="img" style="background-image: url( Chrochet\ Hair\ Accesoy\ 2.jpeg);height: 250px ;width: 175px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Hair Accesory</h1>
+            <h1 style="text-align: center;">Crochet Hair Accesory</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -52,7 +52,7 @@
             <br>
             <div id="img" style="background-image: url( Chrochet\ Cute\ Santa.jpeg);height: 350px ;width: 275px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Cute Santa</h1>
+            <h1 style="text-align: center;">Crochet Cute Santa</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -61,7 +61,7 @@
             <br>
             <div id="img" style="background-image: url( Chrochet\ snowflake.jpeg);height: 350px ;width: 275px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Snowflake</h1>
+            <h1 style="text-align: center;">Crochet Snowflake</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -70,7 +70,7 @@
             <br>
             <div id="img" style="background-image: url( Chrochet\ Granny\ Square\ Mobile\ Bag.jpeg);height: 500px ;width: 250px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Granny Square Mobile Bag</h1>
+            <h1 style="text-align: center;">Crochet Granny Square Mobile Bag</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -79,7 +79,7 @@
             <br>
             <div id="img" style="background-image: url( Green\ Crochet\ mobile\ bag.jpeg);height: 250px ;width: 250px;"></div>
             <br>
-            <h1 style="text-align: center;">Green Chrochet Mobile Bag</h1>
+            <h1 style="text-align: center;">Green Crochet Mobile Bag</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -91,7 +91,7 @@
             <br>
             <div id="img" style="background-image: url( Chrochet\ hand\ bag\ 2.jpeg);height: 500px ;width: 350px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet hangbag</h1>
+            <h1 style="text-align: center;">Crochet hangbag</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -120,7 +120,7 @@
             <br>
             <div id="img" style="background-image: url( Yellow\ mobile\ bag2.jpeg); height: 550px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Yellow Mobile Bag</h1>
+            <h1 style="text-align: center;">Crochet Yellow Mobile Bag</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
@@ -131,7 +131,7 @@
             <br>
             <div id="img" style="background-image: url( Blue\ Mobile\ bag2.jpeg); height: 550px;"></div>
             <br>
-            <h1 style="text-align: center;">Chrochet Blue Mobile Bag</h1>
+            <h1 style="text-align: center;">Crochet Blue Mobile Bag</h1>
             <button> <a href="order.html">Order Now</a> </button>
         </div>
         <br>
